--- a/app/src/main/res/layout/dialog_input_soal.xml
+++ b/app/src/main/res/layout/dialog_input_soal.xml
@@ -121,5 +121,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <Switch
+            android:id="@+id/swDirection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="8dp"
+            android:text="Row"
+            app:layout_constraintStart_toEndOf="@+id/etNoInput"
+            app:layout_constraintTop_toTopOf="@+id/etNoInput" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
