--- a/app/src/main/res/layout/play_header_part.xml
+++ b/app/src/main/res/layout/play_header_part.xml
@@ -6,37 +6,41 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingHorizontal="10dp"
-    android:paddingVertical="5dp">
+    tools:layout_editor_absoluteX="-73dp"
+    tools:layout_editor_absoluteY="14dp">
 
-    <ImageView
-        android:id="@+id/btnSettingClose"
+    <Button
+        android:id="@+id/btnSettingPlay"
+        style="@style/Widget.Material3.Button.IconButton.Outlined"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:icon="@drawable/gear_solid"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tvLabelTop"
-        app:srcCompat="@drawable/gear_solid" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
+    <Button
         android:id="@+id/btnBack"
+        style="@style/Widget.Material3.Button.IconButton.Outlined"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:icon="@drawable/chevron_left_solid"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/circle_chevron_left_solid" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvLabelTop"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:fontFamily="cursive"
-        android:gravity="center_vertical"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:gravity="center_horizontal|center_vertical"
         android:text="TopLabel"
+        android:textColor="@color/button2_color"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/btnBack"
-        app:layout_constraintEnd_toStartOf="@+id/btnSettingClose"
+        app:layout_constraintEnd_toStartOf="@+id/btnSettingPlay"
         app:layout_constraintStart_toEndOf="@+id/btnBack"
         app:layout_constraintTop_toTopOf="@+id/btnBack" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
