--- a/app/src/main/res/layout/editor_layout.xml
+++ b/app/src/main/res/layout/editor_layout.xml
@@ -35,49 +35,46 @@
         android:layout_height="wrap_content"
         android:paddingHorizontal="10dp"
         android:paddingVertical="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/container_info">
+        app:layout_constraintTop_toBottomOf="@+id/container_info"
+        tools:layout_editor_absoluteX="-72dp">
 
         <ImageButton
             android:id="@+id/btnSave"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="#D1C4E9"
             android:src="@android:drawable/ic_menu_save"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/btnEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="#D1C4E9"
             android:src="@android:drawable/ic_menu_edit"
             app:layout_constraintStart_toEndOf="@+id/btnSave"
             app:layout_constraintTop_toTopOf="@+id/btnSave" />
 
         <ImageButton
-            android:id="@+id/btnReset"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/btnClear"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="#D1C4E9"
             app:layout_constraintStart_toEndOf="@+id/btnEdit"
             app:layout_constraintTop_toTopOf="@+id/btnEdit"
-            app:srcCompat="@android:drawable/ic_menu_revert" />
+            app:srcCompat="@android:drawable/ic_menu_delete" />
 
         <ImageButton
-            android:id="@+id/imageButton4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@+id/btnReset"
-            app:layout_constraintTop_toTopOf="@+id/btnReset"
-            app:srcCompat="@android:drawable/ic_menu_add" />
+            android:id="@+id/btnAdd"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@color/button2_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/btnSave"
+            app:srcCompat="@drawable/plus_solid" />
 
-        <ImageButton
-            android:id="@+id/imageButton6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@+id/imageButton4"
-            app:layout_constraintTop_toTopOf="@+id/imageButton4"
-            app:srcCompat="@android:drawable/ic_menu_directions" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -232,7 +229,7 @@
 
         <TextView
             android:id="@+id/textColId"
-            android:layout_width="60dp"
+            android:layout_width="100dp"
             android:layout_height="30dp"
             android:layout_marginStart="8dp"
             android:background="#7C4DFF"
@@ -244,7 +241,7 @@
 
         <TextView
             android:id="@+id/textRowId"
-            android:layout_width="60dp"
+            android:layout_width="100dp"
             android:layout_height="30dp"
             android:layout_marginStart="32dp"
             android:background="#7C4DFF"
@@ -286,7 +283,7 @@
             android:id="@+id/textView41"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="RowId"
+            android:text="RowId "
             app:layout_constraintStart_toStartOf="@+id/textRowId"
             app:layout_constraintTop_toTopOf="@+id/textView40" />
 
@@ -294,9 +291,8 @@
             android:id="@+id/textView42"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:text="ColId"
-            app:layout_constraintStart_toEndOf="@+id/textView41"
+            android:text="ColId "
+            app:layout_constraintStart_toStartOf="@+id/textColId"
             app:layout_constraintTop_toTopOf="@+id/textView41" />
 
         <TextView
@@ -310,6 +306,7 @@
             android:textColor="@color/button_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView39" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
