--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -6,7 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".ui.BoardActivity">
 
+    <ProgressBar
+        android:id="@+id/loading"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -37,6 +48,7 @@
                         layout="@layout/play_header_part"
                         android:layout_width="match_parent"
                         android:layout_height="60dp" />
+
                 </FrameLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -73,6 +85,7 @@
                                 layout="@layout/board_ten"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content" />
+
                         </FrameLayout>
                     </androidx.core.widget.NestedScrollView>
                 </HorizontalScrollView>
@@ -101,10 +114,9 @@
                     android:id="@+id/frame_question"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    >
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <include
                         android:id="@+id/include_question_span"
@@ -115,11 +127,11 @@
 
                 <FrameLayout
                     android:id="@+id/frame_editor"
-                    app:layout_constraintTop_toBottomOf="@id/frame_question"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/frame_question">
 
                     <include
                         android:id="@+id/include_editor"
