--- a/app/src/main/res/layout/question_list_item.xml
+++ b/app/src/main/res/layout/question_list_item.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="10dp"
-    android:paddingVertical="5dp"
-    app:cardCornerRadius="15dp"
+    android:layout_marginHorizontal="15dp"
     android:layout_marginVertical="5dp"
-    >
+    android:paddingHorizontal="5dp"
+    android:paddingVertical="5dp"
+    app:cardCornerRadius="15dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,33 +25,6 @@
             android:text="Question_ID"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/btnITemEdit"
-            android:layout_width="60dp"
-            android:layout_height="30dp"
-            android:background="@color/button"
-            android:gravity="center"
-            android:text="EDIT"
-            android:textColor="@color/button_text"
-            app:layout_constraintBottom_toTopOf="@+id/btnITemDelete"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5" />
-
-        <TextView
-            android:id="@+id/btnITemDelete"
-            android:layout_width="60dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="4dp"
-            android:background="@color/button"
-            android:gravity="center"
-            android:text="DELETE"
-            android:textColor="@color/button_text"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/btnITemEdit"
-            app:layout_constraintTop_toBottomOf="@+id/btnITemEdit"
-            app:layout_constraintVertical_bias="0.5" />
 
         <TextView
             android:id="@+id/textView10"
@@ -116,5 +88,23 @@
             android:text="Admin"
             app:layout_constraintStart_toStartOf="@+id/tvItemDimension"
             app:layout_constraintTop_toBottomOf="@+id/tvItemDimension" />
+
+        <Button
+            android:id="@+id/btnItemEdit"
+            style="@style/Widget.Material3.Button.IconButton.Outlined"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:icon="@drawable/pen_to_square_solid"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/btnItemDelete"
+            style="@style/Widget.Material3.Button.IconButton.Outlined"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:icon="@drawable/trash_solid"
+            app:layout_constraintEnd_toEndOf="@+id/btnItemEdit"
+            app:layout_constraintTop_toBottomOf="@+id/btnItemEdit" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
