--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,32 +25,19 @@
         app:layout_constraintTop_toTopOf="@+id/btnTrophy" />
 
     <Button
-        android:id="@+id/btnGoCreator"
-        style="@style/Widget.Material3.Button.TonalButton"
-        android:layout_width="250dp"
-        android:layout_height="64dp"
-        android:layout_marginTop="268dp"
-        android:text="EDITOR"
-        android:textColor="@color/button"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.452"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
         android:id="@+id/btnGoListQuestion"
         style="@style/Widget.Material3.Button.TonalButton"
         android:layout_width="0dp"
         android:layout_height="64dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
         android:text="QUESTION"
         android:textColor="@color/button"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/btnGoCreator"
-        app:layout_constraintHorizontal_bias="0.452"
-        app:layout_constraintStart_toStartOf="@+id/btnGoCreator"
-        app:layout_constraintTop_toBottomOf="@+id/btnGoCreator" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
     <Button
         android:id="@+id/btnGoTTS"
