--- a/app/src/main/res/layout/integrated_keyboard.xml
+++ b/app/src/main/res/layout/integrated_keyboard.xml
@@ -3,33 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/integrated_keyboard"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 
     <TextView
-        android:id="@+id/textView05"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:id="@+id/key01"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
         android:background="@color/button"
         android:clickable="true"
         android:gravity="center"
-        android:text="J"
-        android:textColor="@color/button_text"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/textView06"
-        app:layout_constraintTop_toBottomOf="@+id/textView06"
-        tools:ignore="HardcodedText" />
-
-    <TextView
-        android:id="@+id/textView06"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@color/button"
-        android:clickable="true"
-        android:gravity="center"
-        android:text="A"
+        android:text="1"
         android:textColor="@color/button_text"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -37,258 +24,230 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
 
+
     <TextView
-        android:id="@+id/textView20"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:id="@+id/key02"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginStart="1dp"
         android:background="@color/button"
         android:clickable="true"
         android:gravity="center"
-        android:text="D"
+        android:text="2"
         android:textColor="@color/button_text"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/textView13"
-        app:layout_constraintTop_toTopOf="@+id/textView13"
+        app:layout_constraintStart_toEndOf="@+id/key01"
+        app:layout_constraintTop_toTopOf="@+id/key01"
         tools:ignore="HardcodedText" />
 
     <TextView
-        android:id="@+id/textView04"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:id="@+id/key03"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginStart="1dp"
         android:background="@color/button"
         android:clickable="true"
         android:gravity="center"
-        android:text="B"
+        android:text="3"
         android:textColor="@color/button_text"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/textView06"
-        app:layout_constraintTop_toTopOf="@+id/textView06"
+        app:layout_constraintStart_toEndOf="@+id/key02"
+        app:layout_constraintTop_toTopOf="@+id/key02"
         tools:ignore="HardcodedText" />
 
     <TextView
-        android:id="@+id/textView07"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:id="@+id/key04"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
         android:background="@color/button"
         android:clickable="true"
         android:gravity="center"
-        android:text="O"
+        android:text="4"
         android:textColor="@color/button_text"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/textView09"
-        app:layout_constraintTop_toBottomOf="@+id/textView19"
+        app:layout_constraintStart_toEndOf="@+id/key03"
+        app:layout_constraintTop_toTopOf="@+id/key03"
         tools:ignore="HardcodedText" />
 
     <TextView
-        android:id="@+id/textView08"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:id="@+id/key05"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginStart="1dp"
         android:background="@color/button"
         android:clickable="true"
         android:gravity="center"
-        android:text="H"
+        android:text="5"
         android:textColor="@color/button_text"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/textView17"
-        app:layout_constraintTop_toTopOf="@+id/textView17"
-        tools:ignore="HardcodedText" />
-
-    <ImageButton
-        android:id="@+id/btnRecycle"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
-        android:background="#B39DDB"
-        app:layout_constraintStart_toEndOf="@+id/textView12"
-        app:layout_constraintTop_toBottomOf="@+id/btnBackSpace"
-        app:srcCompat="@drawable/arrows_turn_to_dots_solid"
-        tools:ignore="ContentDescription" />
-
-    <TextView
-        android:id="@+id/textView09"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
-        android:background="@color/button"
-        android:clickable="true"
-        android:gravity="center"
-        android:text="N"
-        android:textColor="@color/button_text"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/textView16"
-        app:layout_constraintTop_toBottomOf="@+id/textView03"
+        app:layout_constraintStart_toEndOf="@+id/key04"
+        app:layout_constraintTop_toTopOf="@+id/key04"
         tools:ignore="HardcodedText" />
 
     <TextView
-        android:id="@+id/textView10"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:id="@+id/key06"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
         android:background="@color/button"
         android:clickable="true"
         android:gravity="center"
-        android:text="P"
+        android:text="6"
         android:textColor="@color/button_text"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/textView07"
-        app:layout_constraintTop_toBottomOf="@+id/textView17"
+        app:layout_constraintStart_toEndOf="@+id/key05"
+        app:layout_constraintTop_toTopOf="@+id/key05"
         tools:ignore="HardcodedText" />
 
     <TextView
-        android:id="@+id/textView11"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:id="@+id/key07"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
         android:background="@color/button"
         android:clickable="true"
         android:gravity="center"
-        android:text="K"
+        android:text="7"
         android:textColor="@color/button_text"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/textView05"
-        app:layout_constraintTop_toBottomOf="@+id/textView04"
+        app:layout_constraintStart_toEndOf="@+id/key06"
+        app:layout_constraintTop_toTopOf="@+id/key06"
         tools:ignore="HardcodedText" />
 
     <TextView
-        android:id="@+id/textView12"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
+        android:id="@+id/key08"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:background="@color/button"
         android:clickable="true"
         android:gravity="center"
-        android:text="Q"
+        android:text="8"
         android:textColor="@color/button_text"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/textView10"
-        app:layout_constraintTop_toBottomOf="@+id/textView08"
+        app:layout_constraintStart_toStartOf="@+id/key01"
+        app:layout_constraintTop_toBottomOf="@+id/key01"
         tools:ignore="HardcodedText" />
 
     <TextView
-        android:id="@+id/textView13"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:id="@+id/key09"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginStart="1dp"
         android:background="@color/button"
         android:clickable="true"
         android:gravity="center"
-        android:text="C"
+        android:text="9"
         android:textColor="@color/button_text"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/textView04"
-        app:layout_constraintTop_toTopOf="@+id/textView04"
+        app:layout_constraintTop_toTopOf="@+id/key08"
+        app:layout_constraintStart_toEndOf="@+id/key08"
         tools:ignore="HardcodedText" />
 
     <TextView
-        android:id="@+id/textView17"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:id="@+id/key10"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginStart="1dp"
         android:background="@color/button"
         android:clickable="true"
         android:gravity="center"
-        android:text="G"
+        android:text="10"
         android:textColor="@color/button_text"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/textView19"
-        app:layout_constraintTop_toTopOf="@+id/textView19"
+        app:layout_constraintTop_toTopOf="@+id/key09"
+        app:layout_constraintStart_toEndOf="@+id/key09"
         tools:ignore="HardcodedText" />
 
     <TextView
-        android:id="@+id/textView16"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:id="@+id/key11"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
         android:background="@color/button"
         android:clickable="true"
         android:gravity="center"
-        android:text="M"
+        android:text="11"
         android:textColor="@color/button_text"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/textView15"
-        app:layout_constraintTop_toBottomOf="@+id/textView20"
+        app:layout_constraintTop_toTopOf="@+id/key10"
+        app:layout_constraintStart_toEndOf="@+id/key10"
         tools:ignore="HardcodedText" />
 
     <TextView
-        android:id="@+id/textView15"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:id="@+id/key12"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
         android:background="@color/button"
         android:clickable="true"
         android:gravity="center"
-        android:text="L"
+        android:text="12"
         android:textColor="@color/button_text"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/textView11"
-        app:layout_constraintTop_toBottomOf="@+id/textView13"
+        app:layout_constraintTop_toTopOf="@+id/key11"
+        app:layout_constraintStart_toEndOf="@+id/key11"
         tools:ignore="HardcodedText" />
 
     <TextView
-        android:id="@+id/textView03"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:id="@+id/key13"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginStart="1dp"
         android:background="@color/button"
         android:clickable="true"
         android:gravity="center"
-        android:text="E"
+        android:text="13"
         android:textColor="@color/button_text"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/textView20"
-        app:layout_constraintTop_toTopOf="@+id/textView20"
+        app:layout_constraintTop_toTopOf="@+id/key12"
+        app:layout_constraintStart_toEndOf="@+id/key12"
         tools:ignore="HardcodedText" />
 
     <TextView
-        android:id="@+id/textView19"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:id="@+id/key14"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginStart="1dp"
         android:background="@color/button"
         android:clickable="true"
         android:gravity="center"
-        android:text="F"
+        android:text="14"
         android:textColor="@color/button_text"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/textView03"
-        app:layout_constraintTop_toTopOf="@+id/textView03"
+        app:layout_constraintTop_toTopOf="@+id/key13"
+        app:layout_constraintStart_toEndOf="@+id/key13"
         tools:ignore="HardcodedText" />
 
     <ImageButton
         android:id="@+id/btnBackSpace"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="1dp"
-        android:background="#B39DDB"
-        app:layout_constraintStart_toEndOf="@+id/textView08"
-        app:layout_constraintTop_toTopOf="@+id/textView08"
-        app:srcCompat="@drawable/circle_chevron_left_solid"
-        tools:ignore="ContentDescription" />
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:background="@color/button2_color"
+        app:layout_constraintStart_toEndOf="@+id/key07"
+        app:layout_constraintTop_toTopOf="@+id/key07"
+        app:srcCompat="@drawable/delete_left_solid" />
+
+    <ImageButton
+        android:id="@+id/btnShuffle"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:background="@color/button2_color"
+        app:layout_constraintStart_toEndOf="@+id/key14"
+        app:layout_constraintTop_toBottomOf="@+id/key07"
+        app:srcCompat="@drawable/arrows_turn_to_dots_solid" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
